--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "file-system": "^2.2.2",
     "jasmine": "^2.7.0",
     "selenium-webdriver": "^3.5.0"
   }
